Update InputAlert.scss to fix layout issue

--- a/src/components/Shared/InputAlert/InputAlert.scss
+++ b/src/components/Shared/InputAlert/InputAlert.scss
@@ -8,8 +8,11 @@
 
 
   .alert-wrapper {
-    height: 100vh !important;
-    width: 100vw !important;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     margin: 0px;
     max-height: none;
     max-width: none;
